Fix activity match condition and hide score and assists on small… (#86)

--- a/static/styles/ActivityMatch.scss
+++ b/static/styles/ActivityMatch.scss
@@ -41,6 +41,11 @@
       padding: 0 5px;
     }
 
+    &-mobile {
+      @include breakpoint(600px) {
+        display: none;
+      }
+    }
     > .activity-match__stat-name {
       color: #a9a9a9;
       font-size: 15px;
